# VRCResearchDiscordBot

./: .gitignore  Cargo.toml  LICENSE  README.md  cache.json  main.py  request_lists.json  run.sh
.github/: release.yml
src/: main.rs
