[package]
name = "vrc_research_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.208" }
serde_json = { version = "1.0.125" }
serde_derive = { version = "1.0.208" }
reqwest = "0.12.5"
log = { version = "0.4.22" }
fern = { version = "0.6.2" }
